# amplifier-bundle-terminal-tester

./: .gitignore  README.md  SUPPORT.md  bundle.md
agents/: terminal-debugger.md  terminal-operator.md  terminal-visual-tester.md
behaviors/: terminal-tester.yaml
context/: terminal-awareness.md  terminal-guide.md
docs/: TROUBLESHOOTING.md
examples/: test-amplifier-tui.md
modules/tool-terminal-inspector/: README.md  pyproject.toml
modules/tool-terminal-inspector/amplifier_module_tool_terminal_inspector/: __init__.py  keys.py  session_manager.py
modules/tool-terminal-inspector/tests/: conftest.py  test_keys.py  test_session_manager.py
